# Z80

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md  Z80.cpp  Z80.h  Z80Analyze.h  Z80Assemble.h  Z80Assembler.h  Z80Assembler.md  Z80Decode.h  Z80Decoder.h  Z80_exec.h  build-optimized.sh  codecov.yml  main.cpp
.github/workflows/: build.yml
include/Z80/: Assembler.h  CPU.h  Decoder.h
tests/: Assembler_test.cpp  CMakeLists.txt  CPU_test.cpp  Decoder_test.cpp  Z80Analyze_test.cpp  Z80Asm_test.cpp  Z80Assemble_test.cpp  Z80Decode_test.cpp  Z80Next_test.cpp  build.sh  json-tests.cpp  run-tests.sh  zex-tests.cpp
tools/: .colors  CMakeLists.txt  Z80Asm.cpp  Z80Asm.h  Z80Dump.cpp  Z80Tool.cpp  build-optimized.sh  build.sh  example1.asm
tools/examples/: complex_example.asm  other_file.asm
